Fix top spacing of section sub-headers

--- a/assets/styles/headers.css
+++ b/assets/styles/headers.css
@@ -20,3 +20,6 @@ h4 {
   font-size: 4rem;
 }
 
+section.page h4:first-of-type {
+  padding-top: 0;
+}
